# Commentary-Capsule

./: .gitignore  README.md  poetry-pyproject.toml  pyproject.toml
00-dev-log/: 2024-08-18.md  2024-08-22.md  2024-08-23.md  2024-08-30.md  2025-01-04.md  2025-01-10.md  2025-01-19.md  2025-08-23.md
00-supporting-files/data/reviews/: backpack_reviews_test.json
01-review-collecting/: collection-exploration.ipynb
02-development/01-review-collecting/: backpack_reviews copy.json  collection-exploration.ipynb
02-development/02-review-classification/: classification-review.ipynb
02-development/exploration/: 01-collection-exploration.ipynb  03-classification-review.ipynb
02-development/use_case/: develop.ipynb
03-app/dashboard/: package.json
03-app/dashboard/web/: package.json
dev-log/: 2024-08-18.md
review-collecting/: collection-exploration.ipynb
