[project]
name = "commentary-capsule"
version = "0.1.0"
description = "A project to gather reviews, comments, and other sources of text feedback for classification and identification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.1",
    "openai>=1.59.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
