[project]
name = "commentary-capsule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.3.2",
    "openai>=1.91.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.0",
]
